Add profile info

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from "@/layouts/layout.astro";
 import Navbar from "@/components/navbar/index.astro";
 import Pattern from "@/components/ui/pattern.astro";
+import Profile from "@/components/sections/profile.astro";
 ---
 
 <Layout title="Devfolio - Yash">
@@ -11,5 +12,7 @@ import Pattern from "@/components/ui/pattern.astro";
     class="mx-auto min-h-[calc(100vh-120px)] max-w-3xl"
   >
     <Pattern className="h-14" />
+    <Profile />
+    <Pattern />
   </main>
 </Layout>
