Add about section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from "@/layouts/layout.astro";
 import Navbar from "@/components/navbar/index.astro";
 import Pattern from "@/components/ui/pattern.astro";
 import Profile from "@/components/sections/profile.astro";
+import About from "@/components/sections/about.astro";
 ---
 
 <Layout title="Devfolio - Yash">
@@ -14,5 +15,6 @@ import Profile from "@/components/sections/profile.astro";
     <Pattern className="h-14" />
     <Profile />
     <Pattern />
+    <About />
   </main>
 </Layout>
