--- a/src/components/sections/navbar/index.astro
+++ b/src/components/sections/navbar/index.astro
@@ -1,6 +1,6 @@
 ---
+import NavLinks from "@/components/sections/navbar/nav-links.astro";
 import { PROFILE_INFO } from "@/lib/config";
-import NavLinks from "./nav-links.astro";
 
 interface Props {
   className?: string;
