--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,12 @@
 ---
 import Layout from "@/layouts/layout.astro";
-import Navbar from "@/components/navbar/index.astro";
 import Pattern from "@/components/ui/pattern.astro";
+
+import Navbar from "@/components/sections/navbar/index.astro";
 import Profile from "@/components/sections/profile.astro";
 import About from "@/components/sections/about.astro";
+import TechStack from "@/components/sections/tech-stack.astro";
+import Experience from "@/components/sections/experience/index.astro";
 ---
 
 <Layout title="Devfolio - Yash">
@@ -16,5 +19,9 @@ import About from "@/components/sections/about.astro";
     <Profile />
     <Pattern />
     <About />
+    <Pattern />
+    <TechStack />
+    <Pattern />
+    <Experience />
   </main>
 </Layout>
