--- a/src/components/sections/navbar/nav-links.astro
+++ b/src/components/sections/navbar/nav-links.astro
@@ -1,5 +1,5 @@
 ---
-import { NAV_LINKS } from "@/lib/config";
+import { NAV_LINKS } from "@/lib/nav-links";
 import { cn } from "@/lib/utils";
 
 const pathname = Astro.url.pathname;
