separate profile info from base url

--- a/src/components/sections/about.astro
+++ b/src/components/sections/about.astro
@@ -4,7 +4,7 @@ import BoxTitle from "@/components/box/title.astro";
 import BoxHeader from "@/components/box/header.astro";
 import BoxContent from "@/components/box/content.astro";
 
-import { PROFILE_INFO } from "@/lib/config";
+import { PROFILE_INFO } from "@/lib/profile";
 import MarkdownRenderer from "../ui/markdown-renderer.astro";
 ---
 
