--- a/src/components/sections/experience/index.astro
+++ b/src/components/sections/experience/index.astro
@@ -5,7 +5,7 @@ import BoxTitle from "@/components/box/title.astro";
 import BoxContent from "@/components/box/content.astro";
 
 import ExperienceItem from "./experience-item.astro";
-import { EXPERIENCES } from "@/lib/config";
+import { EXPERIENCES } from "@/lib/profile";
 ---
 
 <Box>
