--- a/src/components/sections/profile.astro
+++ b/src/components/sections/profile.astro
@@ -4,7 +4,7 @@ import Box from "@/components/box/index.astro";
 import BoxContent from "@/components/box/content.astro";
 
 import { Briefcase } from "lucide-react";
-import { PROFILE_INFO } from "@/lib/config";
+import { PROFILE_INFO } from "@/lib/profile";
 
 import VerifiedIcon from "@/components/icons/verified.astro";
 import XIcon from "@/components/icons/x.astro";
