--- a/src/components/ui/avatar.astro
+++ b/src/components/ui/avatar.astro
@@ -1,7 +1,7 @@
 ---
 import { Picture } from "astro:assets";
 import ImgAvatar from "@/assets/avatar.jpg";
-import { PROFILE_INFO } from "@/lib/config";
+import { PROFILE_INFO } from "@/lib/profile";
 
 interface Props {
   className?: string;
