--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE } from "@/lib/config";
+import { SITE } from "@/lib/profile";
 import "@/styles/globals.css";
 import { ClientRouter } from "astro:transitions";
 
