--- a/src/components/sections/navbar/index.astro
+++ b/src/components/sections/navbar/index.astro
@@ -1,6 +1,6 @@
 ---
 import NavLinks from "@/components/sections/navbar/nav-links.astro";
-import { PROFILE_INFO } from "@/lib/config";
+import { PROFILE_INFO } from "@/lib/profile";
 
 interface Props {
   className?: string;
